--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <a src="images/my_picture"></a> 
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet.</p>
 </body>
 </html>
