--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <header>
+        <p><a href="https://kovalenko-23.github.io/goit-markup-hw-01/">WebStudio</a>a></p>
+        <nav>
+            <ul>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+            </ul>
+        </nav>
+    </header>
+<main>
+    <div>    
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button>Заказать услугу</button>
+        </section>
+    </div>
+</main>
 </body>
 </html>
