--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <p><a href="https://kovalenko-23.github.io/goit-markup-hw-01/">WebStudio</a>a></p>
+        <p><a href="https://kovalenko-23.github.io/goit-markup-hw-01/">WebStudio</a></p>
         <nav>
             <ul>
                 <li><a href="">Студия</a></li>
@@ -29,6 +29,73 @@
             <button>Заказать услугу</button>
         </section>
     </div>
+
+    <section>
+        <!-- <h2>Характеристики</h2> -->
+        <ul>
+            <li>
+                <h3>Внимание к деталям</h3> 
+                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            </li>
+            <li>
+                <h3>Пунктуальность</h3> 
+                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой..</p>
+            </li>
+            <li>
+                <h3>Планирование</h3> 
+                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            </li>
+            <li>
+                <h3>Современные технологии</h3> 
+                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            </li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+            <li> <img src="images/image_1.png" alt="image_1" width="370"> </li>
+            <li> <img src="images/image_2.png" alt="image_2" width="370"> </li>
+            <li> <img src="images/image_3.png" alt="image_3" width="370"> </li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Наша команда</h2>
+        <ul>
+            <li> 
+                <img src="images/игорь.jpg" alt="Фото Игоря" width="270">
+                <h3>Игорь Демьяненко</h3> 
+                <p>Product Designer</p>
+            </li>
+            <li> 
+                <img src="images/ольга.jpg" alt="Фото Ольги" width="270">
+                <h3>Ольга Репина</h3> 
+                <p>Frontend Developer</p>
+            </li>
+            <li> 
+                <img src="images/николай.jpg" alt="Фото Николая" width="270">
+                <h3>Николай Тарасов</h3> 
+                <p>Marketing</p>
+            </li>
+            <li> 
+                <img src="images/михаил.jpg" alt="Фото Михаила" width="270">
+                <h3>Михаил Ермаков</h3> 
+                <p>UI Designer</p>
+            </li>
+        </ul>
+    </section>
+
+    <footer>
+        <p><a href="https://kovalenko-23.github.io/goit-markup-hw-01/">WebStudio</a></p>
+        <address>
+            <p>г. Киев, пр-т Леси Украинки, 26 <br />
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
+                <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+            </p>
+        </address>
+    </footer>
 </main>
 </body>
 </html>
