--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </nav>
     </header>
@@ -92,7 +92,7 @@
         <address>
             <p>г. Киев, пр-т Леси Украинки, 26 <br />
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
-                <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
             </p>
         </address>
     </footer>
