--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <header>
-        <p><a href="https://kovalenko-23.github.io/goit-markup-hw-01/">WebStudio</a></p>
         <nav>
+            <a href="https://kovalenko-23.github.io/goit-markup-hw-01/">WebStudio</a>
             <ul>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
 
+        </nav>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
     </header>
 <main>
     <div>    
@@ -55,9 +55,9 @@
     <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-            <li> <img src="images/image_1.png" alt="image_1" width="370"> </li>
-            <li> <img src="images/image_2.png" alt="image_2" width="370"> </li>
-            <li> <img src="images/image_3.png" alt="image_3" width="370"> </li>
+            <li> <img src="images/image_1.jpg" alt="image_1" width="370"> </li>
+            <li> <img src="images/image_2.jpg" alt="image_2" width="370"> </li>
+            <li> <img src="images/image_3.jpg" alt="image_3" width="370"> </li>
         </ul>
     </section>
 
@@ -65,22 +65,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li> 
-                <img src="images/игорь.jpg" alt="Фото Игоря" width="270">
+                <img src="images/ihor.jpg" alt="Фото Игоря" width="270">
                 <h3>Игорь Демьяненко</h3> 
                 <p>Product Designer</p>
             </li>
             <li> 
-                <img src="images/ольга.jpg" alt="Фото Ольги" width="270">
+                <img src="images/olha.jpg" alt="Фото Ольги" width="270">
                 <h3>Ольга Репина</h3> 
                 <p>Frontend Developer</p>
             </li>
             <li> 
-                <img src="images/николай.jpg" alt="Фото Николая" width="270">
+                <img src="images/nick.jpg" alt="Фото Николая" width="270">
                 <h3>Николай Тарасов</h3> 
                 <p>Marketing</p>
             </li>
             <li> 
-                <img src="images/михаил.jpg" alt="Фото Михаила" width="270">
+                <img src="images/mikchail.jpg" alt="Фото Михаила" width="270">
                 <h3>Михаил Ермаков</h3> 
                 <p>UI Designer</p>
             </li>
@@ -89,7 +89,7 @@
 </main>
 
 <footer>
-    <p><a href="https://kovalenko-23.github.io/goit-markup-hw-01/">WebStudio</a></p>
+    <a href="https://kovalenko-23.github.io/goit-markup-hw-01/">WebStudio</a>
     <address>
         <p>г. Киев, пр-т Леси Украинки, 26 <br />
             <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
