--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="https://kovalenko-23.github.io/goit-markup-hw-01/">WebStudio</a>
+            <a class="logo-link" href="https://kovalenko-23.github.io/goit-markup-hw-01/">WebStudio</a>
             <ul>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
