--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div>    
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <button>Заказать услугу</button>
+            <button class="button-order" >Заказать услугу</button>
         </section>
     </div>
 
